<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DictadoJuego">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botonAyuda"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etq_botonAyuda"
            android:onClick="mostrarAyuda"/>

        <Button
            android:id="@+id/botonAnterior"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/etq_botonAnterior"
            android:onClick="anteriorReproduccion" />

        <Button
            android:id="@+id/botonSiguiente"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/etq_botonSiguiente"
            android:onClick="siguienteReproduccion"/>

        <Button
            android:id="@+id/botonReproduccir"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reproducir"
            android:paddingLeft="20dp"
            android:text="@string/etq_botonReproducir" />

    </LinearLayout>

    <EditText
        android:id="@+id/textoAyuda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:enabled="false"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/areaTexto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:height="200dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botonIncognito"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etq_botonIncongnito" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/botonComparar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etq_botonComparar"
            android:onClick="comparar"/>



    </LinearLayout>



</LinearLayout>